# pure-python-app-template

./: .gitignore  deploy.sh  pyproject.toml
iac/: app.py
iac/iac/: iac_stack.py
server/server/handlers/: hello_handler.py
